# athena-evals

./: .gitignore  README.md  pyproject.toml
athena/: cli.py  metrics.py  models.py  report.py
datasets/: demo.jsonl
