[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-evals"
version = "0.1.0"
description = "Unified LLM prompt+model evaluation harness with HTML reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.0",
  "jinja2>=3.1.4",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.4",
  "httpx>=0.27.0"
]

[project.scripts]
athena = "athena.cli:app"
